<resources>
    <string name="app_name">Moviez</string>
    <string name="star">Star</string>
    <string name="search">Search</string>
    <string name="movie">Movie</string>
    <string name="tv">TV</string>
    <string name="discover">Discover</string>
    <string name="discover_movies">Discover Movies</string>
    <string name="discover_tv_series">Discover TV Series</string>
    <string name="popular">Popular</string>
    <string name="trending">Trending</string>
    <string name="trending_daily">Trending Daily</string>
    <string name="trending_weekly">Trending Weekly</string>
    <string name="top_rated">Top Rated</string>
    <string name="upcoming">Upcoming</string>
    <string name="now_playing">Now Playing</string>
    <string name="see_all">See All</string>
    <string name="airing_today">Airing Today</string>
    <string name="on_the_air">On The Air</string>
    <string name="runtime">Runtime</string>
    <string name="cast">Cast</string>
    <string name="production_companies">Production Companies</string>
    <string name="production_countries">Production Countries</string>
    <string name="revenue">Revenue</string>
    <string name="budget">Budget</string>
    <string name="release_date">Release Date</string>
    <string name="status">Status</string>
    <string name="original_language">Original Language</string>
    <string name="original_title">Original Title</string>
    <string name="information">Information</string>
    <string name="overview">Overview</string>
    <string name="runtime_mask" translatable="false">%s %s</string>
    <string name="money_mask" translatable="false">$ %s</string>
    <string name="first_air_date">First Air Date</string>
    <string name="last_air_date">Last Air Date</string>
    <string name="aired_episodes">Aired Episodes</string>
    <string name="show_type">Show Type</string>
    <string name="about">About</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="stars">Stars</string>
    <string name="birth_date">Birth Date</string>
    <string name="death_date">Death Date</string>
    <string name="birth_place">Birth Place</string>
    <string name="biography">Biography</string>
    <string name="unknown">UNKNOWN</string>

    <!--    Plurals-->
    <plurals name="minutes">
        <item quantity="one">%1$d minute</item>
        <item quantity="few">%1$d minutes</item>
        <item quantity="many">%1$d minutes</item>
        <item quantity="other">%1$d minutes</item>
    </plurals>

    <plurals name="hours">
        <item quantity="one">%1$d hour</item>
        <item quantity="few">%1$d hours</item>
        <item quantity="many">%1$d hours</item>
        <item quantity="other">%1$d hours</item>
    </plurals>
</resources>