<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/movieFragment"
        android:icon="@drawable/movie"
        android:orderInCategory="1"
        android:title="@string/movie"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/TVFragment"
        android:icon="@drawable/tv"
        android:orderInCategory="2"
        android:title="@string/tv"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/starFragment"
        android:icon="@drawable/star"
        android:orderInCategory="3"
        android:title="@string/star"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/search"
        android:orderInCategory="4"
        android:title="@string/search"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
</menu>