<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="movie"
            type="com.example.moviez.model.movie.MovieDetails" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView27"
                bindProductionCompany="@{movie.productionCompanies}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/secondaryTextColor"
                app:layout_constraintStart_toEndOf="@id/barrier3"
                app:layout_constraintTop_toTopOf="@+id/textView18"
                tools:text="Syncopy\nWarner Bros. Pictures" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView26"
                bindProductionCountry="@{movie.productionCountries}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/secondaryTextColor"
                app:layout_constraintStart_toEndOf="@id/barrier3"
                app:layout_constraintTop_toTopOf="@+id/textView17"
                tools:text="Estonia\nUnited Kingdom\nUnited States" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView25"
                bindRevenue="@{movie.revenue}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/secondaryTextColor"
                app:layout_constraintStart_toEndOf="@id/barrier3"
                app:layout_constraintTop_toTopOf="@+id/textView16"
                tools:text="$146,200,000" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView24"
                bindBudget="@{movie.budget}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/secondaryTextColor"
                app:layout_constraintStart_toEndOf="@id/barrier3"
                app:layout_constraintTop_toTopOf="@+id/textView15"
                tools:text="$205,000,000" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView23"
                bindDate="@{movie.releaseDate}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/secondaryTextColor"
                app:layout_constraintStart_toEndOf="@id/barrier3"
                app:layout_constraintTop_toTopOf="@+id/textView14"
                tools:text="3 September 2020" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:maxLines="2"
                android:text="@{movie.title}"
                android:textColor="@color/secondaryTextColor"
                android:textSize="18sp"
                android:textStyle="bold"
                app:autoSizeTextType="uniform"
                app:layout_constraintEnd_toStartOf="@+id/textView4"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Tenet" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:drawableStart="@drawable/star"
                android:gravity="center"
                android:maxLength="4"
                android:text="@{String.valueOf(movie.voteAverage)}"
                android:textColor="@color/secondaryTextColor"
                app:drawableTint="#FFC107"
                app:layout_constraintBottom_toBottomOf="@+id/textView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="7.9" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView7"
                bindYear="@{movie.releaseDate}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/date"
                android:drawingCacheQuality="high"
                android:gravity="center"
                android:textColor="@color/secondaryTextColor"
                app:drawableTint="@android:color/black"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                tools:text="2020" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/overview"
                android:textColor="@color/secondaryTextColor"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@{movie.overview}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/textView8"
                tools:text="Armed with only one word, Tenet, and fighting for the survival of the entire world, a Protagonist journeys through a twilight world of international espionage on a mission that will unfold in something beyond real time." />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/information"
                android:textColor="@color/secondaryTextColor"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/original_title"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/original_language"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/textView19" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/status"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/textView29" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/release_date"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/textView22" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/budget"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/textView23" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/revenue"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/textView24" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/production_countries"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/textView25" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/production_companies"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/textView26" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView19"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:maxLines="2"
                android:text="@{movie.originalTitle}"
                android:textColor="@color/secondaryTextColor"
                app:autoSizeTextType="uniform"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/barrier3"
                app:layout_constraintTop_toTopOf="@+id/textView11"
                tools:text="Tenet" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="end"
                app:constraint_referenced_ids="textView11,textView16,textView15,textView13,textView18,textView17,textView14,textView12"
                tools:layout_editor_absoluteX="411dp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:maxLength="10"
                android:text="@{movie.originalLanguage}"
                android:textColor="@color/secondaryTextColor"
                app:layout_constraintStart_toEndOf="@id/barrier3"
                app:layout_constraintTop_toTopOf="@id/textView12"
                tools:text="English" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@{movie.status}"
                android:textColor="@color/secondaryTextColor"
                app:layout_constraintStart_toEndOf="@id/barrier3"
                app:layout_constraintTop_toTopOf="@id/textView13"
                tools:text="Released" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/runtime"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/textView21" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView29"
                bindRuntime="@{movie.runtime}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/secondaryTextColor"
                app:layout_constraintStart_toEndOf="@id/barrier3"
                app:layout_constraintTop_toTopOf="@+id/textView28"
                tools:text="2 hours 30 minute" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/cast"
                android:textColor="@color/secondaryTextColor"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView27" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView30"
                tools:listitem="@layout/item_cast" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>